2008-07-15 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/src/ipmi-sensors-config-threshold-section.c:
	Cleanup to prepare for hysteresis configuration support.

	* ipmi-sensors-config/: Support threshold hysteresis configuration.
	
	* ipmi-sensors-config/src/ipmi-sensors-config-discrete-section.h,
	ipmi-sensors-config/src/ipmi-sensors-config-discrete-section.c:
	New files.

	* ipmi-sensors-config/: Support hysteresis configuration on
	discrete sensors.

	* common/src/config-checkout.c (config_checkout_section): Fix
        corner case.

2008-07-14 Albert Chu <chu11@llnl.gov>
	
	* ipmimonitoring/: Fix up -v output formatting.

	* common/src/configtool/config-tool-argp.c: Fix -v option support.

	* common/man/manpage-common-config-tool-options.man: Fix man options.

	* bmc-config/: Output authentication type enables and serial
	conf, but only under verbose mode.

2008-07-13 Albert Chu <chu11@llnl.gov>

	* tagged pre_remove_serial_bmc_config

	* bmc-config/: remove checkout of serial config sections/fields.

	* tagged post_remove_serial_bmc_config
	
	* ipmi-sensors/src/: Limit output in verbose and very verbose when
	data is clearly irrelevant.  

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(run_cmd_args): Similar to ipmi-sensors, output "OK" if a bitmask
	sensor reading has no bits set.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_threshold_sensor_reading): Check for valid analog data format as
	well as linearization.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): Check for reading state in sensor reading.

	* ipmimonitoring/src/libipmimonitoring/: Support "connection
	timeout" error message.

	* ipmimonitoring/: Support -v verbose option.

2008-07-12 Albert Chu <chu11@llnl.gov>

	* Update bmc-config, pef-config, ipmi-sensors-config with some
	config text.
	
2008-07-11 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/: Output multiple event messages on multiple